# whisper-server-ws

./: .env.example  CONFIG.md  Cargo.toml  README.md  test-client.html
examples/: README.md  client.js  client.py
src/: config.rs  main.rs
src/vad/: mod.rs  silero_vad.rs  speech_segment.rs
