[package]
name = "whisper-server-ws"
version = "0.1.0"
edition = "2024"

[dependencies]
ctrlc = "3.5.1"
futures = "0.3.31"
futures-util = "0.3.31"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "net","sync", "signal"] }
tokio-tungstenite = "0.28.0"
whisper-rs = "0.15.1"

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version="0.15.1",features = ["metal"] }
