[package]
name = "whisper-server-ws"
version = "0.1.0"
edition = "2024"

[dependencies]
ctrlc = "3.5.1"
dotenv = "0.15"
futures = "0.3.31"
futures-util = "0.3.31"
ndarray = "0.17"
num_cpus = "1.17"
ort = "2.0.0-rc.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "net","sync", "signal"] }
tokio-tungstenite = "0.28.0"
whisper-rs = "0.15.1"

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version="0.15.1",features = ["metal"] }
[target.'cfg(target_os = "windows")'.dependencies]
whisper-rs = { version="0.15.1",features = ["cuda"] }
